--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.0.3",
     "axios": "^1.6.8",
+    "classnames": "^2.5.1",
+    "date-fns": "^3.6.0",
     "icons": "^1.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
